# py-persian-tools

./: .gitignore  .travis.yml  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: test.yml
persian_tools/: __init__.py  commas.py  digits.py  national_id.py  ordinal_suffix.py  separator.py
persian_tools/bank/: banks_code.py  card_number.py  exceptions.py  sheba.py
persian_tools/bank/card_number/: __init__.py
persian_tools/bill/: __init__.py  exceptions.py
persian_tools/card_number/: __init__.py  banks_code.py
persian_tools/digits/: __init__.py  strings.py
persian_tools/economic_national_id/: __init__.py  exceptions.py
persian_tools/legal_id/: __init__.py
persian_tools/national_id/: __init__.py  exceptions.py  places_code.py
persian_tools/phone_number/: __init__.py  exceptions.py  operators.py
persian_tools/plate/: __init__.py  dataset.py  exceptions.py
scripts/: test.sh
tests/: test_bank_card_number.py  test_bank_sheba.py  test_bill.py  test_card_number.py  test_commas.py  test_digis.py  test_economic_national_id.py  test_legal_id.py  test_national_id.py  test_ordinal_suffix.py  test_phone_number.py  test_plate.py  test_separator.py
