[metadata]
name = persian_tools
version = 0.0.7
author = Ali Madihi (mrunderline)
author_email = alimadihib@gmail.com
description = An anthology of a variety of tools for the Persian language in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/persian-tools/py-persian-tools
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
python_requires = >=3.6
